# asr

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_both  Dockerfile_indic  Dockerfile_nemo  README.md  app.py  diarize_inventory.py  docker-compose.yml  eval_hindi_biasing.py  nemotron_streaming.py  pipeline.py  probe_biasing.py  requirements.txt  requirements_indic.txt  requirements_nemo.txt  streaming_handler.py  transcript_render.py
itn_service/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compile.py  conftest.py  pyproject.toml
itn_service/configs/: locales.yaml  policy.yaml  thresholds.yaml
itn_service/cxx_runtime/: far_loader.cc  normalizer_service.cc
itn_service/grammars/bn/: cardinal.py  date.py  decimal.py  id.py  money.py  percent.py  phone.py  time.py  verbalize_final.py
itn_service/grammars/common/: digit_maps.py  indian_grouping.py
itn_service/grammars/gu/: cardinal.py  date.py  decimal.py  id.py  money.py  percent.py  phone.py  time.py  verbalize_final.py
itn_service/grammars/hi/: cardinal.py  date.py  decimal.py  id.py  money.py  percent.py  phone.py  time.py  verbalize_final.py
itn_service/grammars/kn/: cardinal.py  date.py  decimal.py  id.py  money.py  percent.py  phone.py  time.py  verbalize_final.py
itn_service/grammars/ml/: cardinal.py  date.py  decimal.py  id.py  money.py  percent.py  phone.py  time.py  verbalize_final.py
itn_service/grammars/mr/: cardinal.py  date.py  decimal.py  id.py  money.py  percent.py  phone.py  time.py  verbalize_final.py
itn_service/grammars/pa/: cardinal.py  date.py  decimal.py  id.py  money.py  percent.py  phone.py  time.py  verbalize_final.py
itn_service/grammars/ta/: cardinal.py  date.py  decimal.py  id.py  money.py  percent.py  phone.py  time.py  (+1 more)
itn_service/runtime/: confidence_gate.py  contract.py  dateparser_fallback.py  display_renderer.py  domain_terms.py  far_cache.py  hindi_numerals.py  locale_policy.py  nemo_itn_adapter.py  normalizer.py  offline_hindi_fallback.py  offline_normalizer.py  regex_prefilter.py  script_router.py  self_correction.py  spoken_prefilter.py  stream_state.py  unicode_clean.py  wfst_classifier.py  wfst_factory.py  wfst_pipeline.py
itn_service/service/: __init__.py  build_protos.sh  grpc_server.py  itn.proto
itn_service/tools/: benchmark_latency.py  build_gold_from_csv.py  export_far.sh  normalize_offline_transcript.py
(+116 files in other folders)
